<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdbtnAmharic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/setting_dialog_lblAmharic" />

            <RadioButton
                android:id="@+id/rdbtnEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/setting_dialog_lblEnglish" />

            <RadioButton
                android:id="@+id/rdbtnOromiffa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/setting_dialog_lblOromiffa" />

            <RadioButton
                android:id="@+id/rdbtnTigrigna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/setting_dialog_lblTigrigna" />

        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/txtContent">

            <Button
                android:id="@+id/btnDialogCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.50"
                android:background="@drawable/button_background"
                android:text="@string/setting_dialog_btnDialogCancel" />

            <Button
                android:id="@+id/btnDialogSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.50"
                android:background="@drawable/button_background"
                android:text="@string/setting_dialog_btnDialogSave" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>