<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <CheckBox
        android:id="@+id/chkTiming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder_dialog_chkTiming" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chkTiming">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.50"
            android:background="@drawable/button_background"
            android:text="@string/set_reminder_dialog_btnCancel" />

        <Button
            android:id="@+id/btnDialogSet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.50"
            android:background="@drawable/button_background"
            android:text="@string/set_reminder_dialog_btnSet" />
    </LinearLayout>

</RelativeLayout>